--- a/trunk/gwindows/azip.rc
+++ b/trunk/gwindows/azip.rc
@@ -18,7 +18,15 @@ Folders_BMP        BITMAP         "ico_bmp/folders.bmp"
 
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+No_regedit_BMP     BITMAP         "ico_bmp/no_regedit.bmp"
+
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 Toolbar_BMP        BITMAP         "ico_bmp/az_tools.bmp"
+
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+ZA_console_BMP     BITMAP         "ico_bmp/za_console.bmp"
 
 
 
@@ -382,7 +390,7 @@ FONT 8, "Ms Shell Dlg"
     GROUPBOX        "Command-line parameters", 0, 4, 3, 362, 65, 0, WS_EX_LEFT
     LTEXT           "The activation of AZip with command-line parameters for specific operations is under construction", 0, 17, 18, 342, 29, SS_LEFT, WS_EX_LEFT
     GROUPBOX        "Command-line tools with console output", IDC_STATIC, 4, 72, 366, 66, 0, WS_EX_LEFT
-    ICON            ZA_console_icon, IDC_STATIC, 10, 88, 50, 50, SS_ICON, WS_EX_LEFT
+    CONTROL         ZA_console_BMP, IDC_STATIC, WC_STATIC, SS_BITMAP, 10, 88, 43, 39, WS_EX_LEFT
     LTEXT           "Pure command-line tools corresponding to AZip are located in the Zip-Ada project (zipada, unzipada, rezip, find_zip, comp_zip). Follow hyperlink in the About box for download.", 0, 63, 87, 294, 33, SS_LEFT, WS_EX_LEFT
 }
 
@@ -410,7 +418,7 @@ FONT 8, "Ms Shell Dlg"
 {
     LTEXT           "AZip doesn't require any installation. It can even run from a USB stick for instance.", 0, 4, 3, 366, 9, SS_LEFT, WS_EX_LEFT
     GROUPBOX        "Using AZip as a portable software - stealth mode", IDC_STATIC, 4, 23, 366, 66, 0, WS_EX_LEFT
-    ICON            No_regedit_icon, IDC_STATIC, 10, 39, 50, 50, SS_ICON, WS_EX_LEFT
+    CONTROL         No_regedit_BMP, IDC_STATIC, WC_STATIC, SS_BITMAP, 10, 39, 43, 39, WS_EX_LEFT
     LTEXT           "For convenience, by default, AZip writes user settings in the registry, as standard Windows software does. If you want the registry NOT being written to, you can add a file, azip.cfg (can be empty), in the same directory as azip*.exe. User settings will be recorded there. If the file is read-only, it simply won't be changed, and settings won't be saved.", 0, 69, 38, 288, 40, SS_LEFT, WS_EX_LEFT
 }
 
@@ -518,15 +526,7 @@ Key_Icon           ICON           "ico_bmp/key.ico"
 
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-No_regedit_icon    ICON           "ico_bmp/no_regedit.ico"
-
-
-LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 Plus_icon          ICON           "ico_bmp/plus.ico"
-
-
-LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
-ZA_console_icon    ICON           "ico_bmp/za_console.ico"
 
 
 
