--- a/trunk/gwindows/azip.rc
+++ b/trunk/gwindows/azip.rc
@@ -216,10 +216,12 @@ FONT 8, "Ms Shell Dlg"
     GROUPBOX        "Zip-Ada - Zip archive management library", IDC_STATIC, 11, 4, 283, 44, 0, WS_EX_LEFT
     LTEXT           "Stratégies Software team: intensive profiling and contributions", IDC_STATIC, 25, 18, 260, 8, SS_LEFT, WS_EX_LEFT
     LTEXT           "ITEC team at NXP Semiconductors: contributions", IDC_STATIC, 25, 32, 260, 8, SS_LEFT, WS_EX_LEFT
-    GROUPBOX        "GWindows - native MS Windows framework", IDC_STATIC, 11, 54, 284, 62, 0, WS_EX_LEFT
+    GROUPBOX        "GWindows - native MS Windows framework", IDC_STATIC, 11, 54, 283, 62, 0, WS_EX_LEFT
     LTEXT           "David Botton: main author", IDC_STATIC, 25, 69, 260, 8, SS_LEFT, WS_EX_LEFT
     LTEXT           "André van Splunter", IDC_STATIC, 25, 83, 260, 8, SS_LEFT, WS_EX_LEFT
     LTEXT           "Frank Piron, Falk Maier at KonAd GmbH: authors of GWindows Extended", IDC_STATIC, 25, 97, 260, 8, SS_LEFT, WS_EX_LEFT
+    GROUPBOX        "Miscellaneous comments - contributions - ideas", IDC_STATIC, 11, 121, 283, 52, 0, WS_EX_LEFT
+    LTEXT           "Asen Anastassov, Nicolas F. Mirkov", 0, 21, 134, 268, 32, SS_LEFT, WS_EX_LEFT
     DEFPUSHBUTTON   "Close", IDOK, 107, 177, 88, 19, 0, WS_EX_LEFT
 }
 
